--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:2.5.3")
 
     //Fragment
-
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
+
+    //swipe refresh
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
