--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".PostActivity"
+        <activity android:name=".PostActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
