--- a/app/bugiwear/src/main/AndroidManifest.xml
+++ b/app/bugiwear/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:value="true" />
 
         <activity
+            android:name=".SettingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_setting"></activity>
+        <activity
             android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login">
