--- a/app/bugiwear/src/main/AndroidManifest.xml
+++ b/app/bugiwear/src/main/AndroidManifest.xml
@@ -24,9 +24,25 @@
             android:value="true" />
 
         <activity
+            android:name=".PostActivity"
+            android:exported="false"
+            android:label="@string/title_activity_post"></activity>
+        <activity
+            android:name=".UserPostListActivity"
+            android:exported="true"
+            android:label="@string/title_activity_user_post_list"></activity>
+        <activity
+            android:name=".MyFriendsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_my_friends" />
+        <activity
+            android:name=".MyProfileActivity"
+            android:exported="false"
+            android:label="@string/title_activity_my_profile" />
+        <activity
             android:name=".SettingActivity"
             android:exported="false"
-            android:label="@string/title_activity_setting"></activity>
+            android:label="@string/title_activity_setting" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
@@ -40,13 +56,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
